--- a/CSS/common.css
+++ b/CSS/common.css
@@ -10,11 +10,10 @@ this is where the navigation bar and footer code are. the html code is copy/past
 	--green-theme:#49C155;
 	--text-color-override: white;
 	--override-white: white;
+	--title-font: "Merriweather",sans-serif;
+	--normal-font: "Roboto",sans-serif;
 }
 
-body::before {
-	background-color: rebeccapurple;
-}
 *{
 	padding: 0;
 	margin: 0;
